[package]
name = "discord-bot-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
poise = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["client", "gateway", "framework", "standard_framework"] } 
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
